--- a/Kanji.html
+++ b/Kanji.html
@@ -12,29 +12,23 @@ src="https://counter11.optistats.ovh/private/counter.js?c=gnw7j2ykt2luqca9k124b9
 <body>
     <div class="container">
         <div class="botao-alfabeto"> 
-            <button type="button" onclick="redirecionarParaHiragana()">ひらがな<br>Hiragana</button>
+            <button type="button" onclick="redirecionarParaHiragana()">一 二 三<br>Numeros</button>
         </div>
         <div class="botao-alfabeto">
-            <button type="button" onclick="redirecionarParaKatakana()">カタカナ<br>Katakana</button>
-        </div>
-          <div class="botao-alfabeto">
-            <button type="button" onclick="redirecionarParaKatakana()">漢字<br>Kanji</button>
+            <button type="button" onclick="redirecionarParaKatakana()">色<br>Cores</button>
         </div>
     </div>
 
     <script>
         function redirecionarParaHiragana() {
             // Redireciona para a página desejada
-            window.location.href = "desafio.html";
+            window.location.href = "numeros.html";
         }
         function redirecionarParaKatakana() {
             // Redireciona para a página desejada
-            window.location.href = "desafio2.html";
+            window.location.href = "cores.html";
         }
-        function redirecionarParaKatakana() {
-            // Redireciona para a página desejada
-            window.location.href = "Kanji.html";
-        }
+
     </script>
 </body>
 </html>
