--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ src="https://counter11.optistats.ovh/private/counter.js?c=gnw7j2ykt2luqca9k124b9
             <button type="button" onclick="redirecionarParaKatakana()">カタカナ<br>Katakana</button>
         </div>
           <div class="botao-alfabeto">
-            <button type="button" onclick="redirecionarParaKatakana()">漢字<br>Kanji</button>
+            <button type="button" onclick="redirecionarParakanji()">漢字<br>Kanji</button>
         </div>
     </div>
 
@@ -31,7 +31,7 @@ src="https://counter11.optistats.ovh/private/counter.js?c=gnw7j2ykt2luqca9k124b9
             // Redireciona para a página desejada
             window.location.href = "desafio2.html";
         }
-        function redirecionarParaKatakana() {
+        function redirecionarParakanji() {
             // Redireciona para a página desejada
             window.location.href = "Kanji.html";
         }
